Static code divided into components

--- a/src/styles.css
+++ b/src/styles.css
@@ -19,7 +19,7 @@
   margin: 0;
   padding: 1em;
   text-align: left;
-  background-color: #1CB0F6;
+  background-color: #1cb0f6;
   color: #fff;
   border-radius: 0 0 7px 7px;
 }
